@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.226 2006/06/05 01:11:16 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.227 2006/06/05 01:27:03 agaffney Exp $
 
   8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/fe/gtk/RunInstall.py, src/fe/gtk/URIBrowser.py:
@@ -11,6 +11,7 @@
   4 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   add X of Y to FutureBar
   update Welcome.py help for install mode
+  networkless support in Stage.py
 
   2 May 2006; Andrew Gaffney <agaffney@gentoo.org>
   added splashscreen
